# wgpu_engine

./: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
cpp/: .clang-format  .clangd  .gitignore  CMakeLists.txt  extension.cpp  extension.hpp  glfw_wgpu.cpp  glfw_wgpu.hpp  main.cpp  readme.md  shader.wgsl  shape.cpp  shape.hpp
js/: eslint.config.js  index.html  package-lock.json  package.json
js/src/: App.tsx
rust/: Cargo.toml  shader.wgsl
rust/src/: main.rs
src/: App.tsx  shader_code.ts
